--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -24,14 +24,10 @@
           <div class="form-group form-group-sm">
             <br>
             <label for="minmax-buttons" id="quote-label">{{'gis.quotation.product' | translate}}</label>
-            <!-- <select class="form-select form-control-sm " id="quote-dropdown" formControlName="productCode">
-              <option value="">{{productDescription |sentenceCase}}</option>
-
-            </select> -->
             <p-dropdown formControlName="productCode" [options]="productList" optionLabel="description"
             [filterBy]="'description'" [filter]="true"
            ></p-dropdown>
-          
+
           </div>
         </div>
         <div class="col-sm-4 col-6">
@@ -50,7 +46,7 @@
           <div class="form-group form-group-sm">
             <br>
             <label for="minmax-buttons" id="quote-label"> {{'gis.quotation.vehicle_make' | translate}}</label>
-             
+
             <p-dropdown formControlName="vehicleMake" [options]="vehicleMakeList" optionLabel="name" [filterBy]="'name'" [filter]="true"
               (onChange)="onVehicleMakeSelected($event);"></p-dropdown>
           </div>
@@ -132,6 +128,8 @@
 
           </div>
         </div>
+
+        <!-- date fields -->
         <div class="col-sm-4 col-6">
           <div class="form-group form-group-sm">
             <br>
@@ -140,7 +138,7 @@
               [dateFormat]="dateFormat" inputStyleClass='form-control' [showIcon]="true"
               (onSelect)="updateCoverToDate($event)" [minDate]="minDate" >
             </p-calendar>
-            
+
           </div>
         </div>
         <div class="col-sm-4 col-6">
@@ -153,12 +151,12 @@
             </p-calendar>
           </div>
         </div>
-       
+
       </div>
       <button type="button" class="btn btn-primary float-end " (click)="createRiskDetail()">
         {{'gis.quotation.save_details' | translate}}</button>
 
-   
+
     </div>
   </div>
   <!-- schedule card -->
