--- a/src/app/features/fms/components/receipt-preview/receipt-preview.component.css
+++ b/src/app/features/fms/components/receipt-preview/receipt-preview.component.css
@@ -1,14 +1,17 @@
-.btn-actions {
+/* .btn-actions {
   display: flex;
-  justify-content: space-between;
+  
+  
+  align-items: center; 
+  flex-direction: row;
   gap: 8px;
   margin-top: 5px;
-}
+} */
 /* .btn-back{
     display:flex;
     align-items: flex-start;
     } */
-.btn-back {
+/* .btn-back {
   margin-top: 1px;
   text-decoration: underline;
   background: transparent;
@@ -16,12 +19,13 @@
 }
 .btn-next {
   justify-content: flex-end;
-}
+} */
 .ngx-doc-viewer iframe{
 pointer-events: none;
 }
-.radiobtn{
+
+/* .radiobtn{
   display: flex;
   gap:10px;
   margin-top: 5px; 
-}
+} */
